--- a/backend/views/verificationMail.hbs
+++ b/backend/views/verificationMail.hbs
@@ -1,2 +1,2 @@
-`Hi! There, You have recently visited our website and entered your email.
-    Please follow the given link to verify your email http://localhost:3000/note/verify/{{token}}`
+Hi! There, You have recently visited our website and entered your email. Please
+follow the given link to verify your email http://localhost:5173/verify/{{token}}
